--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.fbertos</groupId>
-  <artifactId>spark-streaming-example</artifactId>
+  <artifactId>spark-kafka-example</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>spark-example</name>
+  <name>spark-kafka-example</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -25,27 +25,52 @@
     </dependency>  
 	<dependency>
 	  <groupId>org.apache.spark</groupId>
-	  <artifactId>spark-core_2.12</artifactId>
-	  <version>2.4.0</version>
+	  <artifactId>spark-core_2.11</artifactId>
+	  <version>2.3.0</version>
 	  <scope>provided</scope>
-	  <exclusions>
-	    <exclusion>
-	      <groupId>org.slf4j</groupId>
-	      <artifactId>slf4j-log4j12</artifactId>
-	    </exclusion>
-	  </exclusions>
 	</dependency>
 	<dependency>
 	  <groupId>org.apache.spark</groupId>
-	  <artifactId>spark-streaming_2.12</artifactId>
-	  <version>2.4.0</version>
+	  <artifactId>spark-streaming_2.11</artifactId>
+	  <version>2.3.0</version>
 	  <scope>provided</scope>
-	  <exclusions>
-	    <exclusion>
-	      <groupId>org.slf4j</groupId>
-	      <artifactId>slf4j-log4j12</artifactId>
-	    </exclusion>
-	  </exclusions>
-	</dependency>    
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.spark</groupId>
+	    <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+	    <version>2.3.0</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.8.5</version>
+	</dependency>
   </dependencies>
+  
+	<build>
+	  <plugins>
+	    <plugin>
+	      <artifactId>maven-assembly-plugin</artifactId>
+	      <configuration>
+	        <archive>
+	          <manifest>
+	            <mainClass>org.fbertos.spark.SparkKafkaStreamingProgram</mainClass>
+	          </manifest>
+	        </archive>
+	        <descriptorRefs>
+	          <descriptorRef>jar-with-dependencies</descriptorRef>
+	        </descriptorRefs>
+	      </configuration>
+		  <executions>
+		    <execution>
+		      <id>make-assembly</id>
+		      <phase>package</phase>
+		      <goals>
+		        <goal>single</goal>
+		      </goals>
+		    </execution>
+		  </executions>	      
+	    </plugin>
+	  </plugins>
+	</build>  
 </project>
